Bug 249001 - Renaming a file does not update window title and makes "Reload" fail
Summary: Renaming a file does not update window title and makes "Reload" fail
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 285867 303150 341524 364104 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-25 15:52 UTC by Daniel Hahler
Modified: 2017-12-06 18:16 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Hahler 2010-08-25 15:52:29 UTC
Version:           0.8.0 (using KDE 4.5.0) 
OS:                Linux

1. "Open with" a file from ksnapshot
2. Rename it via File => Rename
3. The window title does not update, but "File => Properties" displays the new name
4. "File => Reload" fails with "File not found" and the image which has been displayed before still is gone (from the viewport)

Reproducible: Didn't try




OS: Linux (i686) release 2.6.35-17-generic
Compiler: cc
Comment 1 Jekyll Wu 2012-07-07 15:35:20 UTC
*** Bug 303150 has been marked as a duplicate of this bug. ***
Comment 2 Myriam Schweingruber 2014-12-09 20:04:17 UTC
*** Bug 341524 has been marked as a duplicate of this bug. ***
Comment 3 Myriam Schweingruber 2014-12-09 20:05:45 UTC
reproducible with 14.40.0 pre and 5.0.0 pre, see bug 341524
Comment 4 V字龍(Vdragon) 2014-12-10 04:57:11 UTC
Append a simpler reproduce instruction frum Bug #341524

Steps to Reproduce: 
1. Open a picture in Gwenview 
2. Press F2 to rename the picture
3. Press F5 to reload picture

Actual Results: Gwenview said failed to load the <path of original picture> 

Expected Results: Gwenview should load <path of renamed picture> rather than the <path of original picture> 

Reproducible: Always
Comment 5 Nate Graham 2017-09-09 03:40:38 UTC
*** Bug 345980 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2017-09-09 03:40:44 UTC
*** Bug 364104 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2017-09-11 04:18:20 UTC
*** Bug 285867 has been marked as a duplicate of this bug. ***
Comment 8 null 2017-12-06 18:16:11 UTC
Git commit afbad38a6de7a519a4aeabba42f8b48cdc2e3d4c by Henrik Fehlauer, on behalf of Peter Mühlenpfordt.
Committed on 06/12/2017 at 18:15.
Pushed by rkflx into branch 'Applications/17.12'.

Update selection after renaming a file

Summary:
After a file is renamed, update selection in `ContextManager` to reference new filename.
Without this patch the window title is not updated after rename an a reload with F5 fails.

Test Plan:
1. Open a picture in Gwenview (single image view mode)
2. Press F2 and rename the picture -> window title should be updated to new name
3. Press F5 to reload picture -> image should still be viewed

Reviewers: ngraham, rkflx

Reviewed By: ngraham, rkflx

Differential Revision: https://phabricator.kde.org/D9161

M  +1    -0    app/fileopscontextmanageritem.cpp
M  +3    -1    lib/contextmanager.h

https://commits.kde.org/gwenview/afbad38a6de7a519a4aeabba42f8b48cdc2e3d4c