Update selection after renaming a file

Summary:
After a file is renamed, update selection in `ContextManager` to reference new filename.
Without this patch the window title is not updated after rename an a reload with F5 fails.

BUG: 249001

Test Plan:
1. Open a picture in Gwenview (single image view mode)
2. Press F2 and rename the picture -> window title should be updated to new name
3. Press F5 to reload picture -> image should still be viewed

Reviewers: ngraham, rkflx

Reviewed By: ngraham, rkflx

Differential Revision: https://phabricator.kde.org/D9161